# Chinese-Checkers-Assignment

./: .clang-format  CMakeLists.txt
cclibrary/: CMakeLists.txt  aiplayer.cpp  aiplayer.h  cclibrary.cpp  cclibrary.h
cclibrary/benchmarks/: predefined_benchmarks.cc
cclibrary/unittests/: hello_world.cc  my_unittests.cc  my_unittests.cpp  predefined_unittests.cc
client/: CMakeLists.txt  main.cpp
qtclient/: CMakeLists.txt  ccgamemodel.cpp  ccgamemodel.h  guiapplication.cpp  guiapplication.h  main.cpp
qtclient/resources/: qml.qrc
qtclient/resources/qml/: gui.qml
